--- a/frontend/templates/partials/footer.html
+++ b/frontend/templates/partials/footer.html
@@ -2,7 +2,7 @@
 <footer class="bg-white border-t border-[var(--color-bg-secondary)] mt-auto py-10 px-6">
   <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
     <div>
-      <img src="{% static 'Icons/Logo.png' %}" alt="EduPath Logo" class="h-10 mb-4" />
+      <img src="{% static 'Icons/Logo.png' %}?v=2" alt="NeXus Logo" class="h-10 mb-4" />
       <p class="text-secondary text-sm max-w-xs">Прокачай свой мозг :) </p>
     </div>
     <div>
@@ -21,7 +21,7 @@
     </div>
     <div class="animate-fade-in-up" style="animation-delay: 1.8s;">
       <h3 class="font-semibold text-lg mb-4">Подписаться на новости</h3>
-      <p class="text-secondary text-sm mb-4">Будьте в курсе новых курсов</p>
+      <p class="text-secondary text-sm mb-4">Будьте в курсе новостей</p>
       <form class="flex">
         <input type="email" placeholder="Ваш email" class="px-4 py-2.5 rounded-l-lg border border-r-0 border-gray-300 focus:outline-none focus:ring-1 focus:ring-[var(--color-primary)] focus:border-[var(--color-primary)] text-sm w-full">
         <button type="submit" class="bg-[var(--color-primary)] hover:bg-indigo-600 text-white px-4 py-2.5 rounded-r-lg text-sm transition-colors duration-300">
